[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/PlayerAI.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=4]
radius = 127.0
height = 56.0001

[node name="PlayerAI" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="ScammerFOVArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScammerFOVArea"]
position = Vector2( 0, -22 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="FreeableNodeFOVArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="FreeableNodeFOVArea"]
position = Vector2( 0, -22 )
rotation = 1.5708
shape = SubResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="ScammerFOVArea" to="." method="_on_ScammerFOVArea_body_entered"]
[connection signal="body_exited" from="ScammerFOVArea" to="." method="_on_ScammerFOVArea_body_exited"]
[connection signal="area_entered" from="FreeableNodeFOVArea" to="." method="_on_FreeableNodeFOVArea_area_entered"]
[connection signal="area_exited" from="FreeableNodeFOVArea" to="." method="_on_FreeableNodeFOVArea_area_exited"]
